# catcher-agent

./: README.md
catcher-agent-receiver-operator/: charmcraft.yaml  (+3 more)
rocks/ein-agent-worker/: .gitignore  LOCAL_DEVELOPMENT.md  Makefile  example-environment.yaml  pyproject.toml  run-worker-local.sh  run_workflow.py
rocks/ein-agent-worker/ein_agent_worker/: dspy_cli.py  mcp_providers.py  worker.py
rocks/ein-agent-worker/ein_agent_worker/activities/: __init__.py  alertmanager.py  dspy_collection.py  worker_config.py
rocks/ein-agent-worker/ein_agent_worker/dspy_optimization/: __init__.py  data_collector.py  metrics.py  modules.py  optimizer.py  prompt_store.py  signatures.py
rocks/ein-agent-worker/ein_agent_worker/models/: __init__.py  gemini_litellm_provider.py  hitl.py  investigation.py
rocks/ein-agent-worker/ein_agent_worker/utcp/: __init__.py  approval.py  config.py  loader.py  local_file_protocol.py  registry.py  temporal_utcp.py
rocks/ein-agent-worker/ein_agent_worker/utcp/spec/: __init__.py  strategy.py
rocks/ein-agent-worker/ein_agent_worker/utcp/tools/: __init__.py
rocks/ein-agent-worker/ein_agent_worker/workflows/: __init__.py  agent_factory.py  agent_instructions.py  corrective_rca.py  dspy_hooks.py  human_in_loop.py  human_in_the_loop.py  incident_correlation.py  incident_correlation_workflow.py  initial_rca.py  investigation_manager.py  investigation_utils.py  mcp_config.py  multi_agent_correlation.py  prompts.py  single_alert_investigation.py  utils.py
rocks/ein-agent-worker/specs/grafana/: 12.json
rocks/ein-agent-worker/specs/loki/: 3.yaml
(+58 files in other folders)
