[project]
name = "ein-agent-worker"
version = "0.1.0"
description = "Temporal worker for Ein Agent AI-powered workflow execution"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.80.0",
    "openai-agents>=0.5.1",
    "pyyaml>=6.0.3",
    "temporalio>=1.19.0",
    "utcp>=1.1.2",
    "utcp-http>=1.1.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "temporal-lib-py>=1.8.4",
]

[tool.setuptools.packages.find]
include = ["ein_agent_worker*"]
